--- a/src/components/znkAudioPlayer/templates/znkAudioPlayer.template.html
+++ b/src/components/znkAudioPlayer/templates/znkAudioPlayer.template.html
@@ -1,8 +1,8 @@
 <div class="time-display time-passed" ng-if="::d.type === 1"></div>
-<i ng-if="::d.type === 2"
-   class="player-control"
-   on-tap="d.playOrPause()">
-</i>
+<!--<i ng-if="::d.type === 2"-->
+   <!--class="player-control"-->
+   <!--ng-click="d.playOrPause()">-->
+<!--</i>-->
 <ng-switch on="d.type" class="progress-container">
     <div ng-switch-when="1" class="only-progress-wrapper">
         <div class="audio-progress"></div>
