--- a/src/scss/imports/_colors.scss
+++ b/src/scss/imports/_colors.scss
@@ -28,6 +28,7 @@ $bgColor14: #6ac1cc;
 $bgColor15: #f08a1c;
 $bgColor16: #2c808a;
 $bgColor17: #ebebeb;
+$bgColor18: #c2c3c5;
 
 //border color
 $bcColor1: #87ca4d;
