--- a/src/components/znkAudioPlayer/templates/znkImageAudio.template.html
+++ b/src/components/znkAudioPlayer/templates/znkImageAudio.template.html
@@ -8,17 +8,18 @@
         <ng-switch on="audioPlayer.currState">
             <div class="play-button-wrapper"
                  ng-switch-when="1">
-                <button class="btn btn-outline"
-                        on-tap="audioPlayer.currState = audioPlayer.STATE_ENUM.PLAYING">
-                    <i class="ion-play"></i>
-                    PLAY AUDIO
+                <button class="play-button" ng-click="audioPlayer.currState = audioPlayer.STATE_ENUM.PLAYING">
+                    <svg-icon name="play"></svg-icon>
+                    <span class="play-audio-text">PLAY AUDIO</span>
                 </button>
             </div>
-            <znk-audio-player ng-switch-when="2"
-                              source="source"
-                              on-ended="audioPlayer.audioEnded(allowReplay)"
-                              auto-play="true">
-            </znk-audio-player>
+            <div class="znk-audio-player-wrapper">
+                <znk-audio-player ng-switch-when="2"
+                                  source="source"
+                                  on-ended="audioPlayer.audioEnded(allowReplay)"
+                                  auto-play="true">
+                </znk-audio-player>
+            </div>
             <div class="ended-msg"
                  ng-switch-when="3">
                 This audio was already played
