znk play button

--- a/src/components/znkAudioPlayer/main.scss
+++ b/src/components/znkAudioPlayer/main.scss
@@ -2,4 +2,5 @@
 './src/scss/imports/colors',
 './src/scss/imports/mixins',
 'scss/znk-audio-player',
-'scss/znk-image-audio';
+'scss/znk-image-audio',
+'scss/znk-audio-play-button';
