--- a/src/components/znkAudioPlayer/scss/_znk-image-audio.scss
+++ b/src/components/znkAudioPlayer/scss/_znk-image-audio.scss
@@ -38,52 +38,52 @@ znk-image-audio {
             background-color: rgba(22, 22, 22, 0.6);
             border-radius: 0 0 5px 5px;
 
-            .play-button-wrapper {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                .play-button {
-                    @include text-style(16px, $bgColor6, Lato, $regularFontWeight);
-                    @include dimension(180px, 45px);
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    cursor: pointer;
-                    border-radius: 50px;
-                    background: transparent;
-                    border: 2px solid $bgColor6;
-
-                    svg-icon{
-                        width: 28px;
-                        height: auto;
-                        margin-right: 5px;
-
-                        path, polygon{
-                            fill: $bgColor6;
-                        }
-                    }
-
-                    .play-audio-text{
-                        margin-left: 10px;
-                    }
-
-                }
-
-                .play-button:focus, .play-button:active{
-                    outline: none;
-                }
-            }
-
-            .ended-msg {
-                @include text-style(18px, $bgColor6, Lato, $regularFontWeight);
-                text-align: center;
-            }
-
-            .znk-audio-player-wrapper{
-                display: flex;
-                justify-content: center;
-                width: 380px;
-            }
+            //.play-button-wrapper {
+            //    display: flex;
+            //    justify-content: center;
+            //    align-items: center;
+            //    .play-button {
+            //        @include text-style(16px, $bgColor6, Lato, $regularFontWeight);
+            //        @include dimension(180px, 45px);
+            //        display: flex;
+            //        justify-content: center;
+            //        align-items: center;
+            //        cursor: pointer;
+            //        border-radius: 50px;
+            //        background: transparent;
+            //        border: 2px solid $bgColor6;
+            //
+            //        svg-icon{
+            //            width: 28px;
+            //            height: auto;
+            //            margin-right: 5px;
+            //
+            //            path, polygon{
+            //                fill: $bgColor6;
+            //            }
+            //        }
+            //
+            //        .play-audio-text{
+            //            margin-left: 10px;
+            //        }
+            //
+            //    }
+            //
+            //    .play-button:focus, .play-button:active{
+            //        outline: none;
+            //    }
+            //}
+            //
+            //.ended-msg {
+            //    @include text-style(18px, $bgColor6, Lato, $regularFontWeight);
+            //    text-align: center;
+            //}
+            //
+            //.znk-audio-player-wrapper{
+            //    display: flex;
+            //    justify-content: center;
+            //    width: 380px;
+            //}
         }
     }
 }
