--- a/src/components/znkAudioPlayer/templates/znkAudioPlayButton.template.html
+++ b/src/components/znkAudioPlayer/templates/znkAudioPlayButton.template.html
@@ -1,4 +1,4 @@
-<ng-switch on="audioPlayer.currState">
+<ng-switch on="audioPlayer.currState" translate-namespace="ZNK_AUDIO_PLAYER">
     <div class="play-button-wrapper"
          ng-switch-when="1">
         <button class="play-button" ng-click="audioPlayer.currState = audioPlayer.STATE_ENUM.PLAYING">
