on ended audio event handler

--- a/src/components/znkAudioPlayer/templates/znkAudioPlayButton.template.html
+++ b/src/components/znkAudioPlayer/templates/znkAudioPlayButton.template.html
@@ -10,7 +10,7 @@
         <znk-audio-player ng-switch-when="2"
                           source="d.source"
                           type="d.type"
-                          on-ended="audioPlayer.audioEnded(allowReplay)"
+                          on-ended="audioPlayer.audioEnded()"
                           auto-play="true">
         </znk-audio-player>
     </div>
