--- a/src/components/znkAudioPlayer/templates/znkImageAudio.template.html
+++ b/src/components/znkAudioPlayer/templates/znkImageAudio.template.html
@@ -7,7 +7,7 @@
         <znk-audio-play-button
             switch-init="audioPlayer.currState"
             source="source"
-            on-ended="audioPlayer.audioEnded()"
+            on-ended="onEnded()"
             auto-play="autoPlayGetter()">
         </znk-audio-play-button>
     </div>
