audio ended event

--- a/src/components/znkAudioPlayer/templates/znkImageAudio.template.html
+++ b/src/components/znkAudioPlayer/templates/znkImageAudio.template.html
@@ -8,6 +8,7 @@
             switch-init="audioPlayer.currState"
             source="source"
             on-ended="onEnded()"
+            allow-replay="allowReplay()"
             auto-play="autoPlayGetter()">
         </znk-audio-play-button>
     </div>
