--- a/src/components/znkExercise/scss/_znk-exercise-drv-desktop.scss
+++ b/src/components/znkExercise/scss/_znk-exercise-drv-desktop.scss
@@ -17,16 +17,13 @@ znk-exercise.desktop {
                 &.question-answered{
                     button{
                         background: $bgColor3;
-                        svg-icon.chevron .st0{
-                            stroke: $bgColor6;
-                        }
                     }
                 }
 
                 button {
                     border-top-right-radius: 42px;
                     border-bottom-right-radius: 42px;
-                    padding-left: 2px;
+                    padding-right: 3px;
 
                     .chevron {
                         transform: rotate(-90deg);
@@ -73,14 +70,6 @@ znk-exercise.desktop {
                 &:focus {
                     outline: none;
                 }
-
-                svg-icon.chevron {
-                    width: 33px;
-
-                    .st0 {
-                        stroke: #0a9bad;
-                    }
-                }
             }
         }
 
@@ -107,17 +96,6 @@ znk-exercise.desktop {
                 }
                 cursor: pointer;
             }
-        }
-    }
-
-    svg-icon.chevron {
-        .st0 {
-            fill: none;
-            stroke: #231F20;
-            stroke-width: 12;
-            stroke-linecap: round;
-            stroke-linejoin: round;
-            stroke-miterlimit: 10;
         }
     }
 
