add show as done option

--- a/src/components/znkAudioPlayer/templates/znkImageAudio.template.html
+++ b/src/components/znkAudioPlayer/templates/znkImageAudio.template.html
@@ -9,6 +9,7 @@
             source="source"
             on-ended="onEnded()"
             allow-replay="allowReplay()"
+            show-as-done="showAsDone()"
             auto-play="autoPlayGetter()">
         </znk-audio-play-button>
     </div>
