Kosta/znk audio player (#180)
* on ended audio event handler

* audio ended event

* add show as done option

* dist

* without dist

--- a/src/components/znkAudioPlayer/templates/znkImageAudio.template.html
+++ b/src/components/znkAudioPlayer/templates/znkImageAudio.template.html
@@ -7,7 +7,9 @@
         <znk-audio-play-button
             switch-init="audioPlayer.currState"
             source="source"
-            on-ended="audioPlayer.audioEnded()"
+            on-ended="onEnded()"
+            allow-replay="allowReplay()"
+            show-as-done="showAsDone()"
             auto-play="autoPlayGetter()">
         </znk-audio-play-button>
     </div>
