--- a/src/components/general/main.scss
+++ b/src/components/general/main.scss
@@ -1,1 +1,4 @@
-@import
+@import '../../scss/imports/variables',
+        '../../scss/imports/colors',
+        '../../scss/imports/mixins',
+        './scss/timer';
