--- a/src/components/general/templates/timerDrv.html
+++ b/src/components/general/templates/timerDrv.html
@@ -5,10 +5,11 @@
     </div>
     <div ng-switch-when="2" class="timer-type2">
         <div class="timer-display-wrapper">
-            <span class="timer-display"></span>
+            <div class="timer-display"></div>
+            <div class="seconds-text" translate="TIMER.SECONDS"></div>
         </div>
         <div round-progress
-             current="ngModelCtrl.$viewValue"
+             current="timeElapsed"
              max="config.max"
              color="{{config.color}}"
              bgcolor="{{config.bgcolor}}"
