bug fixed: znk exercise next button arrow color is incorrect once the question is answered

--- a/src/components/znkExercise/scss/_znk-exercise-drv-desktop.scss
+++ b/src/components/znkExercise/scss/_znk-exercise-drv-desktop.scss
@@ -17,6 +17,9 @@ znk-exercise.desktop {
                 &.question-answered{
                     button{
                         background: $bgColor3;
+                        svg-icon.chevron .st0{
+                            stroke: $bgColor6;
+                        }
                     }
                 }
 
