--- a/src/components/znkAudioPlayer/templates/znkAudioPlayButton.template.html
+++ b/src/components/znkAudioPlayer/templates/znkAudioPlayButton.template.html
@@ -2,7 +2,7 @@
     <div class="play-button-wrapper"
          ng-switch-when="1">
         <button class="play-button" ng-click="audioPlayer.currState = audioPlayer.STATE_ENUM.PLAYING">
-            <svg-icon name="play"></svg-icon>
+            <svg-icon name="znk-audio-player-play"></svg-icon>
             <span class="play-audio-text" translate=".PLAY_AUDIO"></span>
         </button>
     </div>
