--- a/src/scss/imports/_colors.scss
+++ b/src/scss/imports/_colors.scss
@@ -9,6 +9,7 @@ $fcColor7: #87ca4d;
 $fcColor8: #b7b7b7;
 $fcColor9: #757a83;
 $fcColor10: #ff6766;
+$fcColor11: #cccccc;
 
 //background color
 $bgColor1: #ff6766;
