--- a/src/scss/imports/_colors.scss
+++ b/src/scss/imports/_colors.scss
@@ -30,6 +30,7 @@ $bgColor15: #f08a1c;
 $bgColor16: #2c808a;
 $bgColor17: #ebebeb;
 $bgColor18: #c2c3c5;
+$bcColor19: #ff931e;
 
 //border color
 $bcColor1: #87ca4d;
@@ -37,6 +38,7 @@ $bcColor2: #0a9bad;
 $bcColor3: #CFCFCF;
 $bcColor4: #ff6766;
 $bcColor5: #757a83;
+$bcColor6: #ff931e;
 
 //background with transparency
 $tbgColor1: rgba(0,0,0,0.7);
