--- a/src/scss/imports/_colors.scss
+++ b/src/scss/imports/_colors.scss
@@ -45,6 +45,7 @@ $tbgColor1: rgba(0,0,0,0.7);
 $tbgColor2: rgba(255, 255, 255, 0.91);
 $tbgColor3: rgba(0, 0, 0, 0.08);
 $tbgColor4: rgba(0, 0, 0, 0.08);
+$tbgColor5: rgba(15, 15, 15, 0.85);
 
 /*
 //backgrounds
