--- a/src/components/znkAudioPlayer/scss/_znk-audio-play-button.scss
+++ b/src/components/znkAudioPlayer/scss/_znk-audio-play-button.scss
@@ -3,6 +3,17 @@ znk-audio-play-button {
         display: flex;
         justify-content: center;
         align-items: center;
+
+        &:hover:active&:hover{
+            background-color: $tbgColor5;
+            border-radius: 50px;
+        }
+
+        &:hover{
+            background-color: $tbgColor6;
+            border-radius: 50px;
+        }
+
         .play-button {
             @include text-style(16px, $bgColor6, Lato, $regularFontWeight);
             @include dimension(180px, 45px);
