--- a/src/scss/imports/_colors.scss
+++ b/src/scss/imports/_colors.scss
@@ -10,6 +10,7 @@ $fcColor8: #b7b7b7;
 $fcColor9: #757a83;
 $fcColor10: #ff6766;
 $fcColor11: #cccccc;
+$fcColor12: #d2d2d2;
 
 //background color
 $bgColor1: #ff6766;
@@ -37,12 +38,15 @@ $bcColor2: #0a9bad;
 $bcColor3: #CFCFCF;
 $bcColor4: #ff6766;
 $bcColor5: #757a83;
+$bcColor6: #d2d2d2;
 
 //background with transparency
 $tbgColor1: rgba(0,0,0,0.7);
 $tbgColor2: rgba(255, 255, 255, 0.91);
 $tbgColor3: rgba(0, 0, 0, 0.08);
 $tbgColor4: rgba(0, 0, 0, 0.08);
+$tbgColor5: rgba(255, 255, 255, 0.3);
+$tbgColor6: rgba(255, 255, 255, 0.08);
 
 /*
 //backgrounds
