--- a/src/components/znkAudioPlayer/templates/znkImageAudio.template.html
+++ b/src/components/znkAudioPlayer/templates/znkImageAudio.template.html
@@ -9,7 +9,7 @@
             on-ended="onEnded()"
             on-start="d.showSkipButtonFn()"
             allow-replay="allowReplay()"
-            show-as-done="d.showAsDone"
+            show-as-done="showAsDone"
             auto-play="autoPlayGetter()">
         </znk-audio-play-button>
 
