--- a/src/scss/imports/_colors.scss
+++ b/src/scss/imports/_colors.scss
@@ -31,7 +31,8 @@ $bgColor15: #f08a1c;
 $bgColor16: #2c808a;
 $bgColor17: #ebebeb;
 $bgColor18: #c2c3c5;
-$bcColor19: #ff931e;
+$bgColor19: #ff931e;
+$bgColor20: #b7b7b7;
 
 //border color
 $bcColor1: #87ca4d;
@@ -41,6 +42,7 @@ $bcColor4: #ff6766;
 $bcColor5: #757a83;
 $bcColor6: #ff931e;
 $bcColor7: #d2d2d2;
+$bcColor8: #b7b7b7;
 
 //background with transparency
 $tbgColor1: rgba(0,0,0,0.7);
