--- a/src/scss/imports/_colors.scss
+++ b/src/scss/imports/_colors.scss
@@ -11,6 +11,7 @@ $fcColor9: #757a83;
 $fcColor10: #ff6766;
 $fcColor11: #cccccc;
 $fcColor12: #d2d2d2;
+$fcColor13 : #979797;
 
 //background color
 $bgColor1: #ff6766;
@@ -33,6 +34,8 @@ $bgColor17: #ebebeb;
 $bgColor18: #c2c3c5;
 $bgColor19: #ff931e;
 $bgColor20: #b7b7b7;
+$bgColor21 : #f7f7f7;
+$bgColor22 : #B33520;
 
 //border color
 $bcColor1: #87ca4d;
@@ -43,6 +46,9 @@ $bcColor5: #757a83;
 $bcColor6: #ff931e;
 $bcColor7: #d2d2d2;
 $bcColor8: #b7b7b7;
+$bcColor9 : #87ca4d;
+$bcColor10 : #d3d0d0;
+$bcColor11 : #ebebeb;
 
 //background with transparency
 $tbgColor1: rgba(0,0,0,0.7);
