- added the active-call directive to the calling feature

--- a/src/components/screenSharing/directives/screenSharing/_screen-sharing-drv.scss
+++ b/src/components/screenSharing/directives/screenSharing/_screen-sharing-drv.scss
@@ -16,7 +16,7 @@ screen-sharing{
 
     .sharer-state{
         .close-icon-wrapper{
-            background: $bcColor19;
+            background: $bgColor19;
         }
     }
 
