- added the active-call directive to the calling feature

--- a/src/components/calls/directives/activeCall/activeCall.template.html
+++ b/src/components/calls/directives/activeCall/activeCall.template.html
@@ -4,8 +4,8 @@
             <div class="online-indicator"></div>
         </div>
         <div class="callee-name flex-col">
-            Erik Powel
-            <div class="call-duration">10:25</div>
+            {{teacherName}}
+            <div class="call-duration">{{callDuration}}</div>
         </div>
         <div class="call-controls flex-col">
             <svg-icon name="etutoring-call-mute-icon"></svg-icon>
