--- a/src/components/znkExercise/core/template/btnSectionDesktopTemplate.html
+++ b/src/components/znkExercise/core/template/btnSectionDesktopTemplate.html
@@ -1,14 +1,14 @@
 <div class="btn-container left-container ng-hide"
      ng-show="!!vm.currentQuestionIndex && vm.slideRightAllowed">
     <button ng-click="vm.prevQuestion()">
-        <svg-icon name="chevron"></svg-icon>
+        <svg-icon name="znk-exercise-chevron"></svg-icon>
     </button>
 </div>
 <div class="btn-container right-container ng-hide"
      ng-show="vm.maxQuestionIndex !== vm.currentQuestionIndex && vm.slideLeftAllowed"
      ng-class="{'question-answered': vm.isCurrentQuestionAnswered}">
     <button ng-click="vm.nextQuestion()">
-        <svg-icon name="chevron"></svg-icon>
+        <svg-icon name="znk-exercise-chevron"></svg-icon>
     </button>
 </div>
 <div class="done-btn-wrap show-opacity-animate" ng-if="vm.showDoneButton">
