--- a/src/components/calls/directives/activeCall/_activeCall.scss
+++ b/src/components/calls/directives/activeCall/_activeCall.scss
@@ -51,6 +51,8 @@ active-call {
                 call-btn {
                     svg-icon {
                         &.etutoring-phone-icon {
+                            width: 22px;
+                            height: 22px;
                             float: right;
                         }
                     }
