--- a/src/components/screenSharing/directives/screenSharing/_screen-sharing-drv.scss
+++ b/src/components/screenSharing/directives/screenSharing/_screen-sharing-drv.scss
@@ -18,7 +18,7 @@ screen-sharing{
 
     .sharer-state{
         .close-icon-wrapper{
-            background: $bcColor19;
+            background: $bgColor19;
         }
     }
 
@@ -34,7 +34,7 @@ screen-sharing{
 
     .sharer-state-container{
         .square-side{
-            background: $bcColor19;
+            background: $bgColor19;
             position: fixed;
 
             &.top, &.bottom{
@@ -67,7 +67,7 @@ screen-sharing{
         }
 
         .eye-wrapper{
-            background: $bcColor19;
+            background: $bgColor19;
             width: 52px;
             text-align: center;
             border-radius: 50%;
