- added call modals: incoming call, outgoing call

--- a/src/components/calls/directives/activeCall/_activeCall.scss
+++ b/src/components/calls/directives/activeCall/_activeCall.scss
@@ -34,7 +34,7 @@ active-call {
             }
             &.call-controls {
                 flex-basis: 30%;
-                svg-icon.etutoring-call-mute-icon  {
+                svg-icon.call-mute-icon {
                     float:left;
                     cursor: pointer;
                     width: 21px;
