--- a/src/components/calls/directives/activeCall/activeCall.template.html
+++ b/src/components/calls/directives/activeCall/activeCall.template.html
@@ -8,7 +8,7 @@
             <div class="call-duration">{{callDuration}}</div>
         </div>
         <div class="call-controls flex-col">
-            <svg-icon name="etutoring-call-mute-icon"></svg-icon>
+            <svg-icon name="call-mute-icon"></svg-icon>
             <call-btn></call-btn>
         </div>
     </div>
