--- a/src/scss/imports/_colors.scss
+++ b/src/scss/imports/_colors.scss
@@ -12,6 +12,7 @@ $fcColor10: #ff6766;
 $fcColor11: #cccccc;
 $fcColor12: #d2d2d2;
 $fcColor13 : #979797;
+$fcColor14 : #161616;
 
 //background color
 $bgColor1: #ff6766;
