--- a/src/scss/imports/_variables.scss
+++ b/src/scss/imports/_variables.scss
@@ -1,3 +1,6 @@
+/* paths*/
+$googleFontCDN: '//fonts.googleapis.com/';
+
 /* fonts size */
 $extraLightFontWeight: 100;
 $ultraLightFontWeight: 100;
