--- a/src/components/calls/main.scss
+++ b/src/components/calls/main.scss
@@ -1,6 +1,8 @@
 @import './src/scss/imports/variables',
         './src/scss/imports/colors',
+        './src/scss/imports/fonts',
         './src/scss/imports/mixins';
 
-@import './directives/callBtn/call-btn-drv',
+@import './modals/scss/baseCallsModal',
+        './directives/callBtn/call-btn-drv',
         './directives/activeCall/activeCall';
