--- a/src/components/screenSharing/directives/screenSharing/_screen-sharing-drv.scss
+++ b/src/components/screenSharing/directives/screenSharing/_screen-sharing-drv.scss
@@ -1,4 +1,7 @@
 screen-sharing{
+    position: relative;
+    z-index: 10;
+
     .close-icon-wrapper{
         @include dimension(40px);
         position: fixed;
